--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -8,6 +8,7 @@
         <item>@font/poppins_bold</item>
         <item>@font/poppins_light</item>
         <item>@font/poppins_medium</item>
+        <item>@font/poppins_regular</item>
         <item>@font/poppins_semibold</item>
         <item>@font/roboto_thin</item>
     </array>
