--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,7 +13,7 @@
 
     <ImageView
         android:layout_width="500dp"
-        android:layout_height="350dp"
+        android:layout_height="250dp"
         android:src="@drawable/image"
         android:layout_marginTop="20dp"/>
 
@@ -34,6 +35,7 @@
         android:textStyle="bold" />
 
     <Button
+        android:id="@+id/main_login"
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:background="@drawable/button"
@@ -42,9 +44,10 @@
         android:textSize="18dp"
         android:textStyle="bold"
         android:textColor="#FFF"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginTop="20dp"/>
 
     <Button
+        android:id="@+id/main_reg"
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:background="@drawable/button"
@@ -53,6 +56,6 @@
         android:textSize="18dp"
         android:textStyle="bold"
         android:textColor="#FFF"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="10dp"/>
 
 </LinearLayout>
