--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="#ffff"
     tools:context=".ui.RegisterActivity"
@@ -10,7 +11,7 @@
 
     <ImageView
         android:layout_width="500dp"
-        android:layout_height="350dp"
+        android:layout_height="200dp"
         android:src="@drawable/image"/>
 
     <TextView
@@ -21,8 +22,20 @@
         android:textSize="35dp"
         android:textStyle="bold"
         android:letterSpacing="0.03"/>
+    <EditText
+        android:id="@+id/reg_fullname"
+        android:layout_width="350dp"
+        android:layout_height="45dp"
+        android:background="@drawable/forget"
+        android:text="Full Name"
+        android:textColor="#0d6e6a"
+        android:textStyle="bold"
+        android:textSize="18dp"
+        android:layout_marginTop="5dp"
+        android:paddingLeft="20dp"/>
 
     <EditText
+        android:id="@+id/reg_email"
         android:layout_width="350dp"
         android:layout_height="45dp"
         android:background="@drawable/forget"
@@ -30,10 +43,11 @@
         android:textColor="#0d6e6a"
         android:textStyle="bold"
         android:textSize="18dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:paddingLeft="20dp"/>
 
     <EditText
+        android:id="@+id/reg_phone"
         android:layout_width="350dp"
         android:layout_height="45dp"
         android:background="@drawable/forget"
@@ -41,10 +55,11 @@
         android:textColor="#0d6e6a"
         android:textStyle="bold"
         android:textSize="18dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:paddingLeft="20dp"/>
 
     <EditText
+        android:id="@+id/reg_password"
         android:layout_width="350dp"
         android:layout_height="45dp"
         android:background="@drawable/forget"
@@ -52,10 +67,11 @@
         android:textColor="#0d6e6a"
         android:textStyle="bold"
         android:textSize="18dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:paddingLeft="20dp"/>
 
     <Button
+        android:id="@+id/reg_btn"
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:background="@drawable/button"
@@ -63,83 +79,30 @@
         android:textSize="18dp"
         android:textStyle="bold"
         android:textColor="#FFF"
-        android:layout_marginTop="25dp"/>
+        android:layout_marginTop="10dp"/>
 
     <TextView
+        android:id="@+id/createText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Already have an account? Sign In"
         android:textColor="#0d6e6a"
         android:textStyle="bold"
         android:textSize="18dp"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="5dp"/>
 
-
-
-    <ImageView
-        android:layout_width="500dp"
-        android:layout_height="350dp"
-        android:src="@drawable/image"/>
-
-    <TextView
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register"
-        android:textColor="#0d6e6a"
-        android:textSize="35dp"
-        android:textStyle="bold"
-        android:letterSpacing="0.03"/>
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/createText"
+        app:layout_constraintVertical_bias="0.26" />
 
-    <EditText
-        android:layout_width="350dp"
-        android:layout_height="45dp"
-        android:background="@drawable/forget"
-        android:text="Email"
-        android:textColor="#0d6e6a"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:layout_marginTop="20dp"
-        android:paddingLeft="20dp"/>
 
-    <EditText
-        android:layout_width="350dp"
-        android:layout_height="45dp"
-        android:background="@drawable/forget"
-        android:text="Password"
-        android:textColor="#0d6e6a"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:layout_marginTop="20dp"
-        android:paddingLeft="20dp"/>
-
-    <EditText
-        android:layout_width="350dp"
-        android:layout_height="45dp"
-        android:background="@drawable/forget"
-        android:text="Confirm Password"
-        android:textColor="#0d6e6a"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:layout_marginTop="20dp"
-        android:paddingLeft="20dp"/>
-
-    <Button
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:background="@drawable/button"
-        android:text="Register"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        android:textColor="#FFF"
-        android:layout_marginTop="25dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Already have an account? Sign In"
-        android:textColor="#0d6e6a"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:layout_marginTop="15dp"/>
 
 </LinearLayout>
