--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,7 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forget Password?"
-        android:textColor="#0d6e6a"
+        android:textColor="#191970"
         android:textStyle="bold"
         android:textSize="18dp" />
 
