--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Register"
-        android:textColor="#0d6e6a"
+        android:textColor="#191970"
         android:textSize="35dp"
         android:textStyle="bold"
         android:letterSpacing="0.03"/>
@@ -28,7 +28,7 @@
         android:layout_height="45dp"
         android:background="@drawable/forget"
         android:text="Full Name"
-        android:textColor="#0d6e6a"
+        android:textColor="#191970"
         android:textStyle="bold"
         android:textSize="18dp"
         android:layout_marginTop="5dp"
@@ -40,7 +40,7 @@
         android:layout_height="45dp"
         android:background="@drawable/forget"
         android:text="Email"
-        android:textColor="#0d6e6a"
+        android:textColor="#191970"
         android:textStyle="bold"
         android:textSize="18dp"
         android:layout_marginTop="5dp"
@@ -52,7 +52,7 @@
         android:layout_height="45dp"
         android:background="@drawable/forget"
         android:text="Phone Number"
-        android:textColor="#0d6e6a"
+        android:textColor="#191970"
         android:textStyle="bold"
         android:textSize="18dp"
         android:layout_marginTop="10dp"
@@ -64,7 +64,7 @@
         android:layout_height="45dp"
         android:background="@drawable/forget"
         android:text="Password"
-        android:textColor="#0d6e6a"
+        android:textColor="#191970"
         android:textStyle="bold"
         android:textSize="18dp"
         android:layout_marginTop="5dp"
@@ -86,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Already have an account? Sign In"
-        android:textColor="#0d6e6a"
+        android:textColor="#191970"
         android:textStyle="bold"
         android:textSize="18dp"
         android:layout_marginTop="5dp"/>
