forgot password fix

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -64,6 +64,7 @@
         android:layout_height="45dp"
         android:background="@drawable/forget"
         android:text="Password"
+        android:inputType="textPassword"
         android:textColor="#191970"
         android:textStyle="bold"
         android:textSize="18dp"
