--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,6 +45,7 @@
         android:layout_gravity="center_horizontal"
         android:textColor="#191970"
         android:textStyle="bold"
+        android:inputType="textPassword"
         android:textSize="18dp"
         android:layout_marginTop="20dp"
         android:paddingLeft="20dp"/>
