--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -11,5 +11,8 @@
         <item>@font/poppins_regular</item>
         <item>@font/poppins_semibold</item>
         <item>@font/roboto_thin</item>
+        <item>@font/ubuntu</item>
+        <item>@font/ubuntu_bold</item>
+        <item>@font/ubuntu_medium</item>
     </array>
 </resources>
