--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,109 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="#ffff"
+    android:background="@color/colorPrimary"
     tools:context=".ui.RegisterActivity"
     android:gravity="center_horizontal">
 
-    <ImageView
-        android:layout_width="500dp"
-        android:layout_height="200dp"
-        android:src="@drawable/image"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Register"
-        android:textColor="#191970"
-        android:textSize="35dp"
-        android:textStyle="bold"
-        android:letterSpacing="0.03"/>
-    <EditText
-        android:id="@+id/reg_fullname"
-        android:layout_width="350dp"
-        android:layout_height="45dp"
-        android:background="@drawable/forget"
-        android:text="Full Name"
-        android:textColor="#191970"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:layout_marginTop="5dp"
-        android:paddingLeft="20dp"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/reg_email"
-        android:layout_width="350dp"
-        android:layout_height="45dp"
-        android:background="@drawable/forget"
-        android:text="Email"
-        android:textColor="#191970"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:layout_marginTop="5dp"
-        android:paddingLeft="20dp"/>
+        <ImageView
+            android:id="@+id/circle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_signup"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:translationY="-50dp"/>
 
-    <EditText
-        android:id="@+id/reg_phone"
-        android:layout_width="350dp"
-        android:layout_height="45dp"
-        android:background="@drawable/forget"
-        android:text="Phone Number"
-        android:textColor="#191970"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:layout_marginTop="10dp"
-        android:paddingLeft="20dp"/>
+        <TextView
+            android:id="@+id/getStartedText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CREATE AN ACCOUNT TO GET STARTED"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/circle"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-    <EditText
-        android:id="@+id/reg_password"
-        android:layout_width="350dp"
-        android:layout_height="45dp"
-        android:background="@drawable/forget"
-        android:text="Password"
-        android:inputType="textPassword"
-        android:textColor="#191970"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:layout_marginTop="5dp"
-        android:paddingLeft="20dp"/>
+        <RelativeLayout
+            android:id="@+id/registration"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:padding="20dp"
+            android:background="@drawable/boundingbox"
+            app:layout_constraintTop_toBottomOf="@+id/getStartedText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-    <Button
-        android:id="@+id/reg_btn"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:background="@drawable/button"
-        android:text="Register"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        android:textColor="#FFF"
-        android:layout_marginTop="10dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal"
+                android:padding="10dp"
+                android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/createText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Already have an account? Sign In"
-        android:textColor="#191970"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:layout_marginTop="5dp"/>
+            <EditText
+                android:id="@+id/reg_fullname"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/forget"
+                android:text="Full Name"
+                android:textColor="#191970"
+                android:textStyle="bold"
+                android:textSize="18dp" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createText"
-        app:layout_constraintVertical_bias="0.26" />
+            <EditText
+                android:id="@+id/reg_email"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/forget"
+                android:text="Email"
+                android:textColor="#191970"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:layout_marginTop="5dp" />
+
+            <EditText
+                android:id="@+id/reg_phone"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/forget"
+                android:text="Phone Number"
+                android:textColor="#191970"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:layout_marginTop="10dp"
+                android:paddingLeft="20dp"/>
+
+            <EditText
+                android:id="@+id/reg_password"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/forget"
+                android:text="Password"
+                android:inputType="textPassword"
+                android:textColor="#191970"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:layout_marginTop="5dp"
+                android:paddingLeft="20dp"/>
+
+            <Button
+                android:id="@+id/reg_btn"
+                android:layout_width="350dp"
+                android:layout_height="50dp"
+                android:background="@drawable/button"
+                android:text="Register"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:textColor="#FFF"
+                android:layout_marginTop="10dp"/>
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/createText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Already have an account? Sign In"
+            android:textColor="#191970"
+            android:textStyle="bold"
+            android:textSize="18dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/registration"/>
 
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/createText"
+            app:layout_constraintVertical_bias="0.26" />
 
-</LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
