set parent activities

--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -54,7 +54,7 @@
         android:layout_marginTop="70dp"
         android:background="@drawable/button"
         android:text="LOG IN"
-        android:textColor="#FFF"
+        android:textColor="@color/colorSecondaryText"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,7 @@
         android:background="@drawable/button"
         android:backgroundTint="@color/colorPrimaryLight"
         android:text="SIGN UP"
-        android:textColor="@color/colorPrimaryText"
+        android:textColor="@color/colorSecondaryText"
         android:textSize="18dp"
         app:layout_constraintTop_toBottomOf="@+id/main_login"
         app:layout_constraintEnd_toEndOf="parent"
