--- a/app/src/main/res/values/icons.xml
+++ b/app/src/main/res/values/icons.xml
@@ -14,4 +14,8 @@
     <string name="fa_info_circle">&#xf05a;</string>
     <string name="sign_out_alt">&#xf2f5;</string>
     <string name="fa_file_alt">&#xf15c;</string>
+    <string name="fa_chevron_circle_left">&#xf137;</string>
+    <string name="fa_arrow_circle_right">&#xf0a9;</string>
+    <string name="fa_angle_left">&#xf104;</string>
+    <string name="fa_angle_right">&#xf105;</string>
 </resources>
