--- a/app/src/main/res/layout/calendar_cell.xml
+++ b/app/src/main/res/layout/calendar_cell.xml
@@ -11,9 +11,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/cellDayText"
         android:text="1"
-        android:textSize="20sp"
-        android:textColor="#000"
-        android:textStyle="bold"
+        android:textSize="16sp"
+        android:fontFamily="@font/ubuntu"
+        android:textColor="@color/colorPrimaryText"
         app:layout_constraintBottom_toBottomOf ="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
