--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -10,6 +10,7 @@
         <item>@font/poppins_medium</item>
         <item>@font/poppins_regular</item>
         <item>@font/poppins_semibold</item>
+        <item>@font/roboto</item>
         <item>@font/roboto_thin</item>
         <item>@font/ubuntu</item>
         <item>@font/ubuntu_bold</item>
