--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -23,10 +23,10 @@
         android:id="@+id/appName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_bold"
+        android:fontFamily="@font/ubuntu_bold"
         android:text="Consʌlt"
         android:textColor="@color/colorSecondaryText"
-        android:textSize="50sp"
+        android:textSize="55sp"
         android:elevation="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
         android:id="@+id/moreInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_medium"
+        android:fontFamily="@font/ubuntu"
         android:text="Connect Consult Collaborate"
         android:textColor="@color/colorSecondaryText"
         android:textSize="14sp"
