--- a/app/src/main/res/layout/fragment_introduction_3.xml
+++ b/app/src/main/res/layout/fragment_introduction_3.xml
@@ -122,6 +122,7 @@
         app:layout_constraintWidth_percent=".7" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/getStartedB"
         android:layout_width="250dp"
         android:layout_height="55dp"
         android:fontFamily="@font/poppins_bold"
