--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-    tools:context=".ui.RegisterActivity"
-    android:gravity="center_horizontal">
-
+    android:background="@color/colorSecondaryVariant"
+    tools:context=".ui.RegisterActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -77,7 +75,7 @@
                         android:id="@+id/reg_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/button2"
+                        android:background="@drawable/button3"
                         android:inputType="textEmailAddress"/>
 
 
@@ -98,7 +96,7 @@
                         android:id="@+id/reg_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/button2"
+                        android:background="@drawable/button3"
                         android:inputType="number"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -118,85 +116,11 @@
                         android:id="@+id/reg_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/button2"
-                        android:inputType="textPassword"/>
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-<!--                <EditText-->
-<!--                    android:id="@+id/reg_fullname"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="45dp"-->
-<!--                    android:layout_marginBottom="15dp"-->
-<!--                    android:background="@drawable/forget"-->
-<!--                    android:hint="Full Name"-->
-<!--                    android:textColor="@color/colorPrimaryText"-->
-<!--                    android:textSize="14sp" />-->
-
-<!--                <EditText-->
-<!--                    android:id="@+id/reg_email"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="45dp"-->
-<!--                    android:layout_marginBottom="15dp"-->
-<!--                    android:background="@drawable/forget"-->
-<!--                    android:hint="Email"-->
-<!--                    android:textColor="@color/colorPrimaryText"-->
-<!--                    android:textSize="14sp" />-->
-
-<!--                <EditText-->
-<!--                    android:id="@+id/reg_phone"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="45dp"-->
-<!--                    android:layout_marginBottom="15dp"-->
-<!--                    android:background="@drawable/forget"-->
-<!--                    android:hint="Phone Number"-->
-<!--                    android:textColor="@color/colorPrimaryText"-->
-<!--                    android:textSize="14sp" />-->
-
-<!--                <EditText-->
-<!--                    android:id="@+id/reg_password"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="45dp"-->
-<!--                    android:layout_marginBottom="15dp"-->
-<!--                    android:background="@drawable/forget"-->
-<!--                    android:inputType="textPassword"-->
-<!--                    android:paddingLeft="20dp"-->
-<!--                    android:text="Password"-->
-<!--                    android:textColor="@color/colorPrimaryText"-->
-<!--                    android:textSize="14sp" />-->
-
-                <Button
-                    android:id="@+id/reg_btn"
-                    android:layout_width="280dp"
-                    android:layout_height="50dp"
-                    android:layout_margin="15dp"
-                    android:background="@drawable/button"
-                    android:text="SIGN UP"
-                    android:textColor="@color/colorSecondaryText"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
-
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:boxBackgroundMode="outline"
-                    app:endIconMode="password_toggle"
-                    app:startIconTint="@color/colorSecondaryText"
-                    app:endIconTint="@color/colorPrimaryText"
-                    android:hint="Password"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/reg_password"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
                         android:background="@drawable/button3"
                         android:inputType="textPassword"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
+
             </LinearLayout>
 
             <Button
@@ -210,14 +134,14 @@
                 android:layout_marginTop="25dp"/>
 
             <TextView
-              android:id="@+id/createText"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:fontFamily="@font/ubuntu"
-              android:text="Already have an account? Sign In"
-              android:textColor="@color/colorPrimaryText"
-              android:textSize="18dp"
-              android:layout_marginTop="10dp"/>
+                android:id="@+id/createText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/ubuntu"
+                android:text="Already have an account? Sign In"
+                android:textColor="@color/colorPrimaryText"
+                android:textSize="18dp"
+                android:layout_marginTop="10dp"/>
 
         </LinearLayout>
 
